feat(config + child): add API updat edit need dates
